--- a/spring-batch-docs/src/main/asciidoc/glossary.adoc
+++ b/spring-batch-docs/src/main/asciidoc/glossary.adoc
@@ -1,6 +1,7 @@
 [[glossary]]
 [appendix]
 == Glossary
+
 [glossary]
 === Spring Batch Glossary
 
@@ -27,7 +28,7 @@ Batch Window::
 
 Step::
   The main batch task or unit of work. It initializes the business logic and controls the
-  transaction environment, based on commit interval setting and other factors.
+  transaction environment, based on the commit interval setting and other factors.
 
 Tasklet::
   A component created by an application developer to process the business logic for a
@@ -41,7 +42,7 @@ Batch Job Type::
 Driving Query::
   A driving query identifies the set of work for a job to do. The job then breaks that
   work into individual units of work. For instance, a driving query might be to identify
-  all financial transactions that have a status of "pending transmission" and send them
+  all financial transactions that have a status of "`pending transmission`" and send them
   to a partner system. The driving query returns a set of record IDs to process. Each
   record ID then becomes a unit of work. A driving query may involve a join (if the
   criteria for selection falls across two or more tables) or it may work with a single
@@ -52,7 +53,7 @@ Item::
   terms, this might be a line in a file, a row in a database table, or a particular
   element in an XML file.
 
-Logical Unit of Work (LUW)::
+Logicial Unit of Work (LUW)::
   A batch job iterates through a driving query (or other input source, such as a file) to
   perform the set of work that the job must accomplish. Each iteration of work performed
   is a unit of work.
@@ -70,27 +71,27 @@ Staging Table::
 
 Restartable::
   A job that can be executed again and assumes the same identity as when run initially.
-  In other words, it is has the same job instance ID.
+  In other words, it has the same job instance ID.
 
 Rerunnable::
   A job that is restartable and manages its own state in terms of the previous run's
-  record processing. An example of a rerunnable step is one based on a driving query. If
+  record processing. An example of a re-runnable step is one based on a driving query. If
   the driving query can be formed so that it limits the processed rows when the job is
   restarted, then it is re-runnable. This is managed by the application logic. Often, a
   condition is added to the `where` statement to limit the rows returned by the driving
-  query with logic resembling "and processedFlag!= true".
+  query with logic resembling `and processedFlag!= true`.
 
 Repeat::
-  One of the most basic units of batch processing, it defines by repeatability calling a
+  One of the most basic units of batch processing, it defines by repeatedly calling a
   portion of code until it is finished and while there is no error. Typically, a batch
   process would be repeatable as long as there is input.
 
 Retry::
   Simplifies the execution of operations with retry semantics most frequently associated
-  with handling transactional output exceptions. Retry is slightly different from repeat,
-  rather than continually calling a block of code, retry is stateful and continually
+  with handling transactional output exceptions. Retry is slightly different from repeat.
+  Rather than continually calling a block of code, retry is stateful and continually
   calls the same block of code with the same input, until it either succeeds or some type
-  of retry limit has been exceeded. It is only generally useful when a subsequent
+  of retry limit has been exceeded. It is generally useful only when a subsequent
   invocation of the operation might succeed because something in the environment has
   improved.
 
