--- a/spring-batch-docs/src/main/asciidoc/index-single.adoc
+++ b/spring-batch-docs/src/main/asciidoc/index-single.adoc
@@ -10,6 +10,8 @@ include::toggle.adoc[]
 
 include::spring-batch-intro.adoc[]
 
+include::spring-batch-architecture.adoc[]
+
 include::whatsnew.adoc[]
 
 include::domain.adoc[]
