--- a/spring-batch-docs/src/main/asciidoc/retry.adoc
+++ b/spring-batch-docs/src/main/asciidoc/retry.adoc
@@ -14,9 +14,9 @@ Examples include remote calls to a web service that fails because of a network g
 
 [NOTE]
 ====
-The retry functionality was pulled out of Spring Batch as of 2.2.0.
+As of version 2.2.0, the retry functionality was pulled out of Spring Batch.
 It is now part of a new library, https://github.com/spring-projects/spring-retry[Spring Retry].
 Spring Batch still relies on Spring Retry to automate retry operations within the framework.
-Please refer to the reference documentation of Spring Retry for details about
+See the reference documentation of Spring Retry for details about
 key APIs and how to use them.
 ====
