--- a/spring-batch-docs/src/main/asciidoc/scalability.adoc
+++ b/spring-batch-docs/src/main/asciidoc/scalability.adoc
@@ -10,7 +10,7 @@ ifndef::onlyonetoggle[]
 include::toggle.adoc[]
 endif::onlyonetoggle[]
 
-Many batch processing problems can be solved with single threaded, single process jobs,
+Many batch processing problems can be solved with single-threaded, single-process jobs,
 so it is always a good idea to properly check if that meets your needs before thinking
 about more complex implementations. Measure the performance of a realistic job and see if
 the simplest implementation meets your needs first. You can read and write a file of
@@ -21,27 +21,26 @@ Batch offers a range of options, which are described in this chapter, although s
 features are covered elsewhere. At a high level, there are two modes of parallel
 processing:
 
-* Single process, multi-threaded
+* Single-process, multi-threaded
 * Multi-process
 
 These break down into categories as well, as follows:
 
-* Multi-threaded Step (single process)
-* Parallel Steps (single process)
-* Remote Chunking of Step (multi process)
-* Partitioning a Step (single or multi process)
+* Multi-threaded Step (single-process)
+* Parallel Steps (single-process)
+* Remote Chunking of Step (multi-process)
+* Partitioning a Step (single or multi-process)
 
 First, we review the single-process options. Then we review the multi-process options.
 
 [[multithreadedStep]]
-
 === Multi-threaded Step
 
 The simplest way to start parallel processing is to add a `TaskExecutor` to your Step
 configuration.
 
 [role="xmlContent"]
-For example, you might add an attribute of the `tasklet`, as follows:
+For example, you might add an attribute TO the `tasklet`, as follows:
 
 [source, xml, role="xmlContent"]
 ----
@@ -51,8 +50,8 @@ For example, you might add an attribute of the `tasklet`, as follows:
 ----
 
 [role="javaContent"]
-When using java configuration, a `TaskExecutor` can be added to the step,
-as shown in the following example:
+When using Java configuration, you can add a `TaskExecutor` to the step,
+as the following example shows:
 
 .Java Configuration
 [source, java, role="javaContent"]
@@ -80,16 +79,16 @@ is a standard Spring interface, so consult the Spring User Guide for details of 
 implementations. The simplest multi-threaded `TaskExecutor` is a
 `SimpleAsyncTaskExecutor`.
 
-The result of the above configuration is that the `Step` executes by reading, processing,
+The result of the preceding configuration is that the `Step` executes by reading, processing,
 and writing each chunk of items (each commit interval) in a separate thread of execution.
 Note that this means there is no fixed order for the items to be processed, and a chunk
 might contain items that are non-consecutive compared to the single-threaded case. In
 addition to any limits placed by the task executor (such as whether it is backed by a
-thread pool), there is a throttle limit in the tasklet configuration which defaults to 4.
-You may need to increase this to ensure that a thread pool is fully utilized.
+thread pool), the tasklet configuration has a throttle limit (default: 4).
+You may need to increase this limit to ensure that a thread pool is fully used.
 
 [role="xmlContent"]
-For example you might increase the throttle-limit, as shown in the following example:
+For example, you might increase the throttle-limit, as follows:
 
 [source, xml, role="xmlContent"]
 ----
@@ -100,8 +99,8 @@ For example you might increase the throttle-limit, as shown in the following exa
 ----
 
 [role="javaContent"]
-When using Java configuration, the builders provide access to the throttle limit, as shown
-in the following example:
+When using Java configuration, the builders provide access to the throttle limit, as
+follows:
 
 .Java Configuration
 [source, java, role="javaContent"]
@@ -119,13 +118,13 @@ public Step sampleStep(TaskExecutor taskExecutor) {
 ----
 
 Note also that there may be limits placed on concurrency by any pooled resources used in
-your step, such as a `DataSource`.  Be sure to make the pool in those resources at least
+your step, such as a `DataSource`. Be sure to make the pool in those resources at least
 as large as the desired number of concurrent threads in the step.
 
 There are some practical limitations of using multi-threaded `Step` implementations for
 some common batch use cases. Many participants in a `Step` (such as readers and writers)
-are stateful. If the state is not segregated by thread, then those components are not
-usable in a multi-threaded `Step`. In particular, most of the off-the-shelf readers and
+are stateful. If the state is not segregated by thread, those components are not
+usable in a multi-threaded `Step`. In particular, most of the readers and
 writers from Spring Batch are not designed for multi-threaded use. It is, however,
 possible to work with stateless or thread safe readers and writers, and there is a sample
 (called `parallelJob`) in the
@@ -136,25 +135,23 @@ of items that have been processed in a database input table.
 
 Spring Batch provides some implementations of `ItemWriter` and `ItemReader`.  Usually,
 they say in the Javadoc if they are thread safe or not or what you have to do to avoid
-problems in a concurrent environment.  If there is no information in the Javadoc, you can
-check the implementation to see if there is any state.  If a reader is not thread safe,
+problems in a concurrent environment. If there is no information in the Javadoc, you can
+check the implementation to see if there is any state. If a reader is not thread safe,
 you can decorate it with the provided `SynchronizedItemStreamReader` or use it in your own
-synchronizing delegator. You can synchronize the call to `read()` and as long as the
+synchronizing delegator. You can synchronize the call to `read()`, and, as long as the
 processing and writing is the most expensive part of the chunk, your step may still
-complete much faster than it would in a single threaded configuration.
+complete much more quickly than it would in a single-threaded configuration.
 
 [[scalabilityParallelSteps]]
-
-
 === Parallel Steps
 
 As long as the application logic that needs to be parallelized can be split into distinct
-responsibilities and assigned to individual steps, then it can be parallelized in a
+responsibilities and assigned to individual steps, it can be parallelized in a
 single process. Parallel Step execution is easy to configure and use.
 
 [role="xmlContent"]
 For example, executing steps `(step1,step2)` in parallel with `step3` is straightforward,
-as shown in the following example:
+as follows:
 
 [source, xml, role="xmlContent"]
 ----
@@ -176,7 +173,7 @@ as shown in the following example:
 
 [role="javaContent"]
 When using Java configuration, executing steps `(step1,step2)` in parallel with `step3`
-is straightforward, as shown in the following example:
+is straightforward, as follows:
 
 .Java Configuration
 [source, java, role="javaContent"]
@@ -220,7 +217,7 @@ public TaskExecutor taskExecutor() {
 ----
 
 The configurable task executor is used to specify which `TaskExecutor`
-implementation should be used to execute the individual flows. The default is
+implementation should execute the individual flows. The default is
 `SyncTaskExecutor`, but an asynchronous `TaskExecutor` is required to run the steps in
 parallel. Note that the job ensures that every flow in the split completes before
 aggregating the exit statuses and transitioning.
@@ -228,7 +225,6 @@ aggregating the exit statuses and transitioning.
 See the section on <<step.adoc#split-flows,Split Flows>> for more detail.
 
 [[remoteChunking]]
-
 === Remote Chunking
 
 In remote chunking, the `Step` processing is split across multiple processes,
@@ -245,13 +241,13 @@ expensive than the reading of items (as is often the case in practice).
 The manager is an implementation of a Spring Batch `Step` with the `ItemWriter` replaced
 by a generic version that knows how to send chunks of items to the middleware as
 messages. The workers are standard listeners for whatever middleware is being used (for
-example, with JMS, they would be `MessageListener` implementations), and their role is
-to process the chunks of items using a standard `ItemWriter` or `ItemProcessor` plus
+example, with JMS, they would be `MesssageListener` implementations), and their role is
+to process the chunks of items by using a standard `ItemWriter` or `ItemProcessor` plus an
 `ItemWriter`, through the `ChunkProcessor` interface. One of the advantages of using this
 pattern is that the reader, processor, and writer components are off-the-shelf (the same
-as would be used for a local execution of the step). The items are divided up dynamically
+as would be used for a local execution of the step). The items are divided up dynamically,
 and work is shared through the middleware, so that, if the listeners are all eager
-consumers, then load balancing is automatic.
+consumers, load balancing is automatic.
 
 The middleware has to be durable, with guaranteed delivery and a single consumer for each
 message. JMS is the obvious candidate, but other options (such as JavaSpaces) exist in
@@ -262,7 +258,6 @@ See the section on
 for more detail.
 
 [[partitioning]]
-
 === Partitioning
 
 Spring Batch also provides an SPI for partitioning a `Step` execution and executing it
@@ -285,7 +280,7 @@ each `Job` execution.
 The SPI in Spring Batch consists of a special implementation of `Step` (called the
 `PartitionStep`) and two strategy interfaces that need to be implemented for the specific
 environment. The strategy interfaces are `PartitionHandler` and `StepExecutionSplitter`,
-and their role is shown in the following sequence diagram:
+and the following sequence diagram shows their role:
 
 .Partitioning SPI
 image::{batch-asciidoc}images/partitioning-spi.png[Partitioning SPI, scaledwidth="60%"]
@@ -325,36 +320,41 @@ public Step step1Manager() {
 }
 ----
 
+[role="xmlContent"]
 Similar to the multi-threaded step's `throttle-limit` attribute, the `grid-size`
 attribute prevents the task executor from being saturated with requests from a single
 step.
 
-There is a simple example that can be copied and extended in the unit test suite for
-https://github.com/spring-projects/spring-batch/tree/main/spring-batch-samples/src/main/resources/jobs[Spring
-Batch Samples] (see `partition*Job.xml` configuration).
+[role="javaContent"]
+Similar to the multi-threaded step's `throttleLimit` method, the `gridSize`
+method prevents the task executor from being saturated with requests from a single
+step.
 
-Spring Batch creates step executions for the partitions called "step1:partition0", and so
-on. Many people prefer to call the manager step "step1:manager" for consistency. You can
+The unit test suite for
+https://github.com/spring-projects/spring-batch/tree/main/spring-batch-samples/src/main/resources/jobs[Spring
+Batch Samples] (see `partition*Job.xml` configuration) has a simple example that you can copy and extend.
+
+Spring Batch creates step executions for the partition called `step1:partition0` and so
+on. Many people prefer to call the manager step `step1:manager` for consistency. You can
 use an alias for the step (by specifying the `name` attribute instead of the `id`
 attribute).
 
 [[partitionHandler]]
-
 ==== PartitionHandler
 
-The `PartitionHandler` is the component that knows about the fabric of the remoting or
+`PartitionHandler` is the component that knows about the fabric of the remoting or
 grid environment. It is able to send `StepExecution` requests to the remote `Step`
 instances, wrapped in some fabric-specific format, like a DTO. It does not have to know
 how to split the input data or how to aggregate the result of multiple `Step` executions.
 Generally speaking, it probably also does not need to know about resilience or failover,
 since those are features of the fabric in many cases. In any case, Spring Batch always
-provides restartability independent of the fabric. A failed `Job` can always be restarted
-and only the failed `Steps` are re-executed.
+provides restartability independent of the fabric. A failed `Job` can always be restarted,
+and, in that case, only the failed `Steps` are re-executed.
 
 The `PartitionHandler` interface can have specialized implementations for a variety of
 fabric types, including simple RMI remoting, EJB remoting, custom web service, JMS, Java
-Spaces, shared memory grids (like Terracotta or Coherence), and grid execution fabrics
-(like GridGain). Spring Batch does not contain implementations for any proprietary grid
+Spaces, shared memory grids (such as Terracotta or Coherence), and grid execution fabrics
+(such as GridGain). Spring Batch does not contain implementations for any proprietary grid
 or remoting fabrics.
 
 Spring Batch does, however, provide a useful implementation of `PartitionHandler` that
@@ -364,8 +364,7 @@ executes `Step` instances locally in separate threads of execution, using the
 
 [role="xmlContent"]
 The `TaskExecutorPartitionHandler` is the default for a step configured with the XML
-namespace shown previously. It can also be configured explicitly, as shown in the
-following example:
+namespace shown previously. You can also configure it explicitly, as follows:
 
 [source, xml, role="xmlContent"]
 ----
@@ -381,8 +380,8 @@ following example:
 ----
 
 [role="javaContent"]
-The `TaskExecutorPartitionHandler` can be configured explicitly within java configuration,
-as shown in the following example:
+You can explicitly configure the `TaskExecutorPartitionHandler` with Java configuration,
+as follows:
 
 .Java Configuration
 [source, java, role="javaContent"]
@@ -416,12 +415,11 @@ systems. It can also be used for remote execution by providing a `Step` implemen
 that is a proxy for a remote invocation (such as using Spring Remoting).
 
 [[partitioner]]
-
 ==== Partitioner
 
 The `Partitioner` has a simpler responsibility: to generate execution contexts as input
 parameters for new step executions only (no need to worry about restarts). It has a
-single method, as shown in the following interface definition:
+single method, as the following interface definition shows:
 
 [source, java]
 ----
@@ -435,24 +433,23 @@ The return value from this method associates a unique name for each step executi
 later in the Batch metadata as the step name in the partitioned `StepExecutions`. The
 `ExecutionContext` is just a bag of name-value pairs, so it might contain a range of
 primary keys, line numbers, or the location of an input file. The remote `Step` then
-normally binds to the context input using `#{...}` placeholders (late binding in step
-scope), as illustrated in the next section.
+normally binds to the context input by using `#{...}` placeholders (late binding in step
+scope), as shown in the next section.
 
 The names of the step executions (the keys in the `Map` returned by `Partitioner`) need
 to be unique amongst the step executions of a `Job` but do not have any other specific
 requirements. The easiest way to do this (and to make the names meaningful for users) is
 to use a prefix+suffix naming convention, where the prefix is the name of the step that
-is being executed (which itself is unique in the `Job`), and the suffix is just a
+is being executed (which itself is unique in the `Job`) and the suffix is just a
 counter. There is a `SimplePartitioner` in the framework that uses this convention.
 
-An optional interface called `PartitionNameProvider` can be used to provide the partition
+You can use an optional interface called `PartitionNameProvider` to provide the partition
 names separately from the partitions themselves. If a `Partitioner` implements this
-interface, then, on a restart, only the names are queried. If partitioning is expensive,
+interface, only the names are queried on a restart. If partitioning is expensive,
 this can be a useful optimization. The names provided by the `PartitionNameProvider` must
 match those provided by the `Partitioner`.
 
 [[bindingInputDataToSteps]]
-
 ==== Binding Input Data to Steps
 
 It is very efficient for the steps that are executed by the `PartitionHandler` to have
@@ -471,7 +468,7 @@ the `Partitioner` output might resemble the content of the following table:
 |filecopy:partition2|fileName=/home/data/three
 |===============
 
-Then the file name can be bound to a step using late binding to the execution context.
+Then the file name can be bound to a step by using late binding to the execution context.
 
 [role="xmlContent"]
 The following example shows how to define late binding in XML:
