--- a/spring-batch-docs/src/main/asciidoc/testing.adoc
+++ b/spring-batch-docs/src/main/asciidoc/testing.adoc
@@ -3,7 +3,6 @@
 :toclevels: 4
 
 [[testing]]
-
 == Unit Testing
 
 ifndef::onlyonetoggle[]
@@ -13,36 +12,31 @@ endif::onlyonetoggle[]
 As with other application styles, it is extremely important to unit test any code written
 as part of a batch job. The Spring core documentation covers how to unit and integration
 test with Spring in great detail, so it is not be repeated here. It is important, however,
-to think about how to 'end to end' test a batch job, which is what this chapter covers.
-The spring-batch-test project includes classes that facilitate this end-to-end test
+to think about how to "`end to end`" test a batch job, which is what this chapter covers.
+The `spring-batch-test` project includes classes that facilitate this end-to-end test
 approach.
 
 [[creatingUnitTestClass]]
-
-
 === Creating a Unit Test Class
 
-In order for the unit test to run a batch job, the framework must load the job's
-ApplicationContext. Two annotations are used to trigger this behavior:
+For the unit test to run a batch job, the framework must load the job's
+`ApplicationContext`. Two annotations are used to trigger this behavior:
 
-* `@RunWith(SpringJUnit4ClassRunner.class)`: Indicates that the class should use Spring's
+* `@RunWith(SpringJUnit4ClassRunner.class)` indicates that the class should use Spring's
 JUnit facilities
-* `@ContextConfiguration(...)`: Indicates which resources to configure the
+* `@ContextConfiguration(...)` indicates which resources to configure the
 `ApplicationContext` with.
 
 Starting from v4.1, it is also possible to inject Spring Batch test utilities
-like the `JobLauncherTestUtils` and `JobRepositoryTestUtils` in the test context
-using the `@SpringBatchTest` annotation.
+(such as the `JobLauncherTestUtils` and `JobRepositoryTestUtils`) in the test context
+by using the `@SpringBatchTest` annotation.
 
-[NOTE]
-====
-It should be noted that `JobLauncherTestUtils` requires a `Job` bean and that
+NOTE: Note that `JobLauncherTestUtils` requires a `Job` bean and that
 `JobRepositoryTestUtils` requires a `DataSource` bean. Since `@SpringBatchTest`
 registers a `JobLauncherTestUtils` and a `JobRepositoryTestUtils` in the test
 context, it is expected that the test context contains a single autowire candidate
 for a `Job` and a `DataSource` (either a single bean definition or one that is
 annotated with `org.springframework.context.annotation.Primary`).
-====
 
 [role="javaContent"]
 The following Java example shows the annotations in use:
@@ -70,23 +64,21 @@ public class SkipSampleFunctionalTests { ... }
 ----
 
 [[endToEndTesting]]
-
-
 === End-To-End Testing of Batch Jobs
 
-'End To End' testing can be defined as testing the complete run of a batch job from
+"`End To end`" testing can be defined as testing the complete run of a batch job from
 beginning to end. This allows for a test that sets up a test condition, executes the job,
 and verifies the end result.
 
 Consider an example of a batch job that reads from the database and writes to a flat file.
-The test method begins by setting up the database with test data. It clears the CUSTOMER
+The test method begins by setting up the database with test data. It clears the `CUSTOMER`
 table and then inserts 10 new records. The test then launches the `Job` by using the
 `launchJob()` method. The `launchJob()` method is provided by the `JobLauncherTestUtils`
 class. The `JobLauncherTestUtils` class also provides the `launchJob(JobParameters)`
-method, which allows the test to give particular parameters. The `launchJob()` method
+method, which lets the test give particular parameters. The `launchJob()` method
 returns the `JobExecution` object, which is useful for asserting particular information
 about the `Job` run. In the following case, the test verifies that the `Job` ended with
-status "COMPLETED".
+a status of `COMPLETED`.
 
 [role="xmlContent"]
 The following listing shows the example in XML:
@@ -164,8 +156,6 @@ public class SkipSampleFunctionalTests {
 ----
 
 [[testingIndividualSteps]]
-
-
 === Testing Individual Steps
 
 For complex batch jobs, test cases in the end-to-end testing approach may become
@@ -192,7 +182,7 @@ execution. That is the goal of two components in Spring Batch:
 `StepScopeTestExecutionListener` and `StepScopeTestUtils`.
 
 The listener is declared at the class level, and its job is to create a step execution
-context for each test method, as shown in the following example:
+context for each test method, as the following example shows:
 
 [source, java]
 ----
@@ -228,7 +218,7 @@ The other is the Spring Batch `StepScopeTestExecutionListener`. It works by look
 factory method in the test case for a `StepExecution`, using that as the context for the
 test method, as if that execution were active in a `Step` at runtime. The factory method
 is detected by its signature (it must return a `StepExecution`). If a factory method is
-not provided, then a default `StepExecution` is created.
+not provided, a default `StepExecution` is created.
 
 Starting from v4.1, the `StepScopeTestExecutionListener` and
 `JobScopeTestExecutionListener` are imported as test execution listeners
@@ -284,7 +274,6 @@ int count = StepScopeTestUtils.doInStepScope(stepExecution,
 ----
 
 [[validatingOutputFiles]]
-
 === Validating Output Files
 
 When a batch job writes to the database, it is easy to query the database to verify that
@@ -293,7 +282,7 @@ important that the output be verified. Spring Batch provides a class called `Ass
 to facilitate the verification of output files. The method called `assertFileEquals` takes
 two `File` objects (or two `Resource` objects) and asserts, line by line, that the two
 files have the same content. Therefore, it is possible to create a file with the expected
-output and to compare it to the actual result, as shown in the following example:
+output and to compare it to the actual result, as the following example shows:
 
 [source, java]
 ----
@@ -305,13 +294,11 @@ AssertFile.assertFileEquals(new FileSystemResource(EXPECTED_FILE),
 ----
 
 [[mockingDomainObjects]]
-
-
 === Mocking Domain Objects
 
 Another common issue encountered while writing unit and integration tests for Spring Batch
 components is how to mock domain objects. A good example is a `StepExecutionListener`, as
-illustrated in the following code snippet:
+the following code snippet shows:
 
 [source, java]
 ----
@@ -326,10 +313,10 @@ public class NoWorkFoundStepExecutionListener extends StepExecutionListenerSuppo
 }
 ----
 
-The preceding listener example is provided by the framework and checks a `StepExecution`
+The framework provides the preceding listener example and checks a `StepExecution`
 for an empty read count, thus signifying that no work was done. While this example is
-fairly simple, it serves to illustrate the types of problems that may be encountered when
-attempting to unit test classes that implement interfaces requiring Spring Batch domain
+fairly simple, it serves to illustrate the types of problems that you may encounter when
+you try to unit test classes that implement interfaces requiring Spring Batch domain
 objects. Consider the following unit test for the listener's in the preceding example:
 
 [source, java]
@@ -356,7 +343,7 @@ Because the Spring Batch domain model follows good object-oriented principles, t
 model, it does make creating stub objects for unit testing verbose. To address this issue,
 the Spring Batch test module includes a factory for creating domain objects:
 `MetaDataInstanceFactory`. Given this factory, the unit test can be updated to be more
-concise, as shown in the following example:
+concise, as the following example shows:
 
 [source, java]
 ----
@@ -374,6 +361,6 @@ public void testAfterStep() {
 }
 ----
 
-The preceding method for creating a simple `StepExecution` is just one convenience method
-available within the factory. A full method listing can be found in its
+The preceding method for creating a simple `StepExecution` is only one convenience method
+available within the factory. You can find a full method listing in its
 link:$$http://docs.spring.io/spring-batch/apidocs/org/springframework/batch/test/MetaDataInstanceFactory.html$$[Javadoc].
