--- a/spring-batch-docs/src/main/asciidoc/readersAndWriters.adoc
+++ b/spring-batch-docs/src/main/asciidoc/readersAndWriters.adoc
@@ -1694,7 +1694,7 @@ file-1.txt  file-2.txt  ignored.txt
 ----
 
 file-1.txt and file-2.txt are formatted the same and, for business reasons, should be
-processed together. The `MultiResourceItemReader` can be used to read in both files by
+processed together. The `MuliResourceItemReader` can be used to read in both files by
 using wildcards.
 
 [role="xmlContent"]
